--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <h2>Diagrama del Proceso Creativo</h2>
       
       <div class="diagram-container">
-        <img src="diagrama.jpeg" alt="Diagrama del proceso creativo de Delight Lab">
+        <img src="diagrama.jpg" alt="Diagrama del proceso creativo de Delight Lab">
       </div>
     </section>
 
