--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
           <h3>Proyecciones durante el Estallido Social</h3>
           <p class="obra-meta">Santiago de Chile / Octubre 2019 - Marzo 2020</p>
         </div>
+         <div class="distributed-image">
+        <img src="democraciaa.jpg" alt="Proyección video mapping">
+       
+      </div>
+    </section>
         
         <div class="obra-description">
           <p>Durante el estallido social chileno, Delight Lab intervino espacios emblemáticos de Santiago proyectando mensajes de protesta, memoria y esperanza. La más icónica fue la proyección de la palabra "DIGNIDAD" sobre la Torre Telefónica y otros edificios del centro de la ciudad.</p>
