--- a/index.html
+++ b/index.html
@@ -4,8 +4,94 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Delight Lab — Luz, Arte y Protesta</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      min-height: 100%;
+      width: 100%;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .container {
+      flex: 1;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 5vw;
+      box-sizing: border-box;
+    }
+
+    section {
+      margin: 15vh 0;
+      padding-bottom: 5vh;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    footer {
+      margin-top: auto;
+      padding: 10vh 5vw 5vh;
+      background: rgba(255,255,255,0.03);
+      border-top: 1px solid rgba(255,255,255,0.1);
+      text-align: center;
+    }
+
+    header {
+      padding: 10vh 5vw 5vh;
+      text-align: center;
+    }
+
+    .margin-image,
+    .floating-text,
+    .quote-block {
+      position: relative !important;
+      top: auto !important;
+      left: auto !important;
+      right: auto !important;
+      transform: none !important;
+      margin: 5vh 0;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 2vh auto;
+      border-radius: 8px;
+    }
+
+    p, li {
+      line-height: 1.7;
+      margin-bottom: 1em;
+    }
+
+    .section-number {
+      font-size: 3vw;
+      color: rgba(255,255,255,0.15);
+      margin-bottom: 1vh;
+      display: block;
+    }
+
+    .quote-block blockquote {
+      font-style: italic;
+      opacity: 0.9;
+      text-align: center;
+      margin: 5vh auto;
+      max-width: 700px;
+    }
+
+    body::after {
+      content: "";
+      display: block;
+      height: 10vh;
+    }
+  </style>
 </head>
+  
 <body>
   
   <div class="cursor-follower"></div>
